--- a/english.html
+++ b/english.html
@@ -24,19 +24,7 @@
 	<meta property="og:title" content="MONDAY (4 tabs)">
 	<meta property="og:description" content="Click to view all tabs on this Toby collection, including &quot;Meet - vuv-ovvn-wyj&quot;">
 	<meta property="og:url" content="https%3A%2F%2Fwww.gettoby.com%2Fp%2Fkbnthvzmzgr4">
-	<link rel="apple-touch-icon" sizes="57x57" href="/img/icons/apple-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="/img/icons/apple-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="/img/icons/apple-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="/img/icons/apple-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="/img/icons/apple-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="/img/icons/apple-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="/img/icons/apple-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="/img/icons/apple-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-icon-180x180.png">
-	<link rel="icon" type="image/png" sizes="192x192" href="/img/icons/android-icon-192x192.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="/img/icons/favicon-96x96.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png">
+	<link rel="shortcut icon" href="img/social/favicon.ico" type="image/x-icon">
 	<link rel="manifest" href="/img/icons/manifest.json">
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="msapplication-TileImage" content="/img/icons/ms-icon-144x144.png">
