--- a/maths.html
+++ b/maths.html
@@ -13,10 +13,10 @@
 	<meta name="google-site-verification" content="6VF-mgRBt95DN-ifw7cOvFT1CxWRJqmdNGGDALqsPog">
 	<meta name="description" content="Click to view all tabs on this InSeQ collection, including &quot;classroom content&quot;">
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:site" content="Toby">
+	<meta name="twitter:site" content="InSeQ">
 	<meta property="og:type" content="website">
 	<meta property="og:site_name" content="InSeQ">
-	<meta name="twitter:title" content="MONDAY (4 tabs)">
+	<meta name="twitter:title" content="InSeQ.in">
 	<meta name="twitter:description" content="Click to view all tabs on this InSeQ collection, including &quot;classroom content&quot;">
 	<meta name="twitter:url" content="https%3A%2F%2Fwww.gettoby.com%2Fp%2Fkbnthvzmzgr4">
 	<meta property="og:title" content="MONDAY (4 tabs)">
