--- a/other.html
+++ b/other.html
@@ -19,9 +19,9 @@
 	<meta name="twitter:title" content="InSeQ.in">
 	<meta name="twitter:description" content="Click to view all tabs on this InSeQ collection, including &quot;classroom content&quot;">
 	<meta name="twitter:url" content="https%3A%2F%2Fwww.InSeQ.com%2Fp%2Fkbnthvzmzgr4">
-	<meta property="og:title" content="MONDAY (4 tabs)">
+	<meta property="og:title" content="InSeQ">
 	<meta property="og:description" content="Click to view all tabs on this InSeQ collection, including &quot;classroom content&quot;">
-	<meta property="og:url" content="https%3A%2F%2Fwww.gettoby.com%2Fp%2Fkbnthvzmzgr4">
+	<meta property="og:url" content="https%3A%2F%2Fwww.InSeQ.com%2Fp%2Fkbnthvzmzgr4">
 	<link rel="shortcut icon" href="img/social/favicon.ico" type="image/x-icon">
 	<link rel="manifest" href="/img/icons/manifest.json">
 	<meta name="msapplication-TileColor" content="#ffffff">
