--- a/important.html
+++ b/important.html
@@ -11,26 +11,23 @@
 	<meta name="apple-mobile-web-app-capable" content="no">
 	<meta name="google-site-verification" content="eb8VAK_oVaiyHDd2h3Pj0ltugTBwvyz1iiL_9box0z4">
 	<meta name="google-site-verification" content="6VF-mgRBt95DN-ifw7cOvFT1CxWRJqmdNGGDALqsPog">
-	<link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/hddnkoipeenegfoeaoibdmnaalmgkpip">
-	<meta name="description" content="Click to view all tabs on this Toby collection, including &quot;Meet - vuv-ovvn-wyj&quot;">
-	<meta keywords="toby, toby for chrome, toby mini, toby collection, toby tabs, gettoby.com, gettoby, toby notes, toby search, social bookmarking, tab manager, shared web bookmark, bookmark management tool, bookmark manager, read it later, save for later, read later, save for later, bookmarks, chrome browser extension, firefox browser extension, save anything, apps like pocket, apps like diigo, apps like instapaper, apps like evernote, chrome bookmarks, share browser tabs, organize bookmarks, web clipper, delicious">
+	<meta name="description" content="Click to view all tabs on this InSeQ collection, including &quot;classroom content&quot;">
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:site" content="Toby">
+	<meta name="twitter:site" content="InSeQ">
 	<meta property="og:type" content="website">
-	<meta property="og:site_name" content="Better Than Bookmarks - Toby">
-	<meta name="twitter:title" content="MONDAY (4 tabs)">
-	<meta name="twitter:description" content="Click to view all tabs on this Toby collection, including &quot;Meet - vuv-ovvn-wyj&quot;">
-	<meta name="twitter:url" content="https%3A%2F%2Fwww.gettoby.com%2Fp%2Fkbnthvzmzgr4">
-	<meta property="og:title" content="MONDAY (4 tabs)">
-	<meta property="og:description" content="Click to view all tabs on this Toby collection, including &quot;Meet - vuv-ovvn-wyj&quot;">
-	<meta property="og:url" content="https%3A%2F%2Fwww.gettoby.com%2Fp%2Fkbnthvzmzgr4">
+	<meta property="og:site_name" content="InSeQ">
+	<meta name="twitter:title" content="InSeQ.in">
+	<meta name="twitter:description" content="Click to view all tabs on this InSeQ collection, including &quot;classroom content&quot;">
+	<meta name="twitter:url" content="https%3A%2F%2Fwww.InSeQ.com%2Fp%2Fkbnthvzmzgr4">
+	<meta property="og:title" content="InSeQ.in">
+	<meta property="og:description" content="Click to view all tabs on this InSeQ collection, including &quot;classroom content&quot;">
+	<meta property="og:url" content="https%3A%2F%2Fwww.InSeQ.com%2Fp%2Fkbnthvzmzgr4">
 	<link rel="shortcut icon" href="img/social/favicon.ico" type="image/x-icon">
 	<link rel="manifest" href="/img/icons/manifest.json">
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="msapplication-TileImage" content="/img/icons/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Varela+Round%7CMontserrat:400,700%7COpen+Sans:300,600,800" media="all">
-	<link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/hddnkoipeenegfoeaoibdmnaalmgkpip">
 	<link rel="stylesheet" href="style.css">
 </head>
 
