--- a/english.html
+++ b/english.html
@@ -16,10 +16,10 @@
 	<meta name="twitter:site" content="InSeQ">
 	<meta property="og:type" content="website">
 	<meta property="og:site_name" content="InSeQ">
-	<meta name="twitter:title" content="InSeQ">
+	<meta name="twitter:title" content="InSeQ.in">
 	<meta name="twitter:description" content="Click to view all tabs on this InSeQ collection, including &quot;classroom content&quot;">
 	<meta name="twitter:url" content="https%3A%2F%2Fwww.InSeQ.com%2Fp%2Fkbnthvzmzgr4">
-	<meta property="og:title" content="InSeQ">
+	<meta property="og:title" content="InSeQ.in">
 	<meta property="og:description" content="Click to view all tabs on this InSeQ collection, including &quot;classroom content&quot;">
 	<meta property="og:url" content="https%3A%2F%2Fwww.InSeQ.com%2Fp%2Fkbnthvzmzgr4">
 	<link rel="shortcut icon" href="img/social/favicon.ico" type="image/x-icon">
