--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </div>
         </div>
         <div class="Sharing-headerCopy">
-          <h1 class="Sharing-headerTitle"><span class="c--brand">SAL COLLAGE OF ENGINEERING</span> <br> <span class="Sharing-headerSubtitle dimed">InSeQ.in</span></h1></div>
+          <h1 class="Sharing-headerTitle"><span class="c--brand">InSeQ Classroom</span> <br> <span class="Sharing-headerSubtitle dimed">Jenil Kunadiya</span></h1></div>
       </div>
     </div>
     <div class="Sharing-collection p--bottom m--wide">
