--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<meta property="og:title" content="InSeQ.in">
 	<meta property="og:description" content="Click to view all tabs on this InSeQ collection, including &quot;classroom content&quot;">
 	<meta property="og:url" content="https%3A%2F%2Fwww.InSeQ.in.com%2Fp%2Fkbnthvzmzgr4">
-	<link rel="shortcut icon" href="img/social/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="img/social/favicon.png" type="image/x-icon">
 	<link rel="manifest" href="/img/icons/manifest.json">
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="msapplication-TileImage" content="/img/icons/ms-icon-144x144.png">
