--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 <div class="Sharing-collectionCards m--wide">
 
-<div class="Card"><a class="Card-link" href="important.html" target="_blank"><div class="Card-content"><div class="Card-header"><div class="Card-icon" style="background-image: url(img/social/google-classroom.svg)"></div><h3 class="Card-title ellipsis w--bold">IMPORTANT</h3></div><div class="Card-description w--medium"><span>Websites</span></div></div></a></div><div class="Card"><a class="Card-link" href="other.html" target="_blank"><div class="Card-content"><div class="Card-header"><div class="Card-icon" style="background-image: url(img/social/google-classroom.svg)"></div><h3 class="Card-title ellipsis w--bold">OTHER</h3></div><div class="Card-description w--medium"><span>Apps/Softweres</span></div></div></a></div>
+<div class="Card"><a class="Card-link" href="important.html"><div class="Card-content"><div class="Card-header"><div class="Card-icon" style="background-image: url(img/social/google-classroom.svg)"></div><h3 class="Card-title ellipsis w--bold">IMPORTANT</h3></div><div class="Card-description w--medium"><span>Websites</span></div></div></a></div><div class="Card"><a class="Card-link" href="other.html"><div class="Card-content"><div class="Card-header"><div class="Card-icon" style="background-image: url(img/social/google-classroom.svg)"></div><h3 class="Card-title ellipsis w--bold">OTHER</h3></div><div class="Card-description w--medium"><span>Apps/Softweres</span></div></div></a></div>
 
 </div>
 
