--- a/important.html
+++ b/important.html
@@ -57,7 +57,7 @@
           </div>
         </div>
         <div class="Sharing-headerCopy">
-          <h1 class="Sharing-headerTitle"><span class="c--brand">Important</span> <br> <span class="Sharing-headerSubtitle dimed">Website</span></h1></div>
+          <h1 class="Sharing-headerTitle"><span class="c--brand">Important</span> <br> <span class="Sharing-headerSubtitle dimed">Websites</span></h1></div>
       </div>
     </div>
     <div class="Sharing-collection p--bottom m--wide">
