--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 	                        			<div class="Card-content">
 	                        				<div class="Card-header">
 	                        					<div class="Card-icon" style="background-image: url(./img/logos/jenil-profile.jpg)"></div>
-	                        					<h3 class="Card-title ellipsis w--bold">Jenil</h3>
+	                        					<h3 class="Card-title ellipsis w--bold">Jenil <i class="fa fa-lock" style="font-size:12.3px;color:#9c9bb9;"></i> </h3>
 	                        				</div>
 	                        				<div class="Card-description w--medium"><span>Gallery</span></div>
 	                        			</div>
@@ -104,7 +104,7 @@
 	                        			<div class="Card-content">
 	                        				<div class="Card-header">
 	                        					<div class="Card-icon" style="background-image: url(./img/logos/dhruvit-profile.jpeg)"></div>
-	                        					<h3 class="Card-title ellipsis w--bold">Dhulo</h3>
+	                        					<h3 class="Card-title ellipsis w--bold">Dhulo <i class="fa fa-lock" style="font-size:12.3px;color:#9c9bb9;"></i> </h3>
 	                        				</div>
 	                        				<div class="Card-description w--medium"><span>Gallery</span></div>
 	                        			</div>
@@ -153,7 +153,7 @@
 				<div class="Card-content">
 					<div class="Card-header">
 						<div class="Card-icon" style="background-image: url(img/logos/computer-treasure.jpg)"></div>
-						<h3 class="Card-title ellipsis w--bold">Computer World</h3>
+						<h3 class="Card-title ellipsis w--bold">Computer World <i class="fa fa-lock" style="font-size:12.3px;color:#9c9bb9;"></i> </h3>
 					</div>
 					<div class="Card-description w--medium"><span>Treasure</span></div>
 				</div>
