--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 	<meta name="msapplication-TileImage" content="/img/icons/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Varela+Round%7CMontserrat:400,700%7COpen+Sans:300,600,800" media="all">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="style.css">
 	<script src="main.js"</script>
 
