--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 				<div class="Card-content">
 					<div class="Card-header">
 						<div class="Card-icon" style="background-image: url(img/logos/music.jpg)"></div>
-						<h3 class="Card-title ellipsis w--bold">InSeQ Music<i class="fa fa-lock" style="font-size:12.3px;color:#9c9bb9;"></i> </h3>
+						<h3 class="Card-title ellipsis w--bold">InSeQ Music</h3>
 					</div>
 					<div class="Card-description w--medium"><span>Feel The Song</span></div>
 				</div>
