--- a/index.html
+++ b/index.html
@@ -177,23 +177,23 @@
 				<br>
 				<br>
 
-				<div class="Card"><a class="Card-link" href="#ComingSoon...">
+				<div class="Card"><a class="Card-link" href="http://inseq.atwebpages.com/">
 						<div class="Card-content">
 							<div class="Card-header">
 								<div class="Card-icon" style="background-image: url(./img/logos/logo-inseq.png)"></div>
 								<h3 class="Card-title ellipsis w--bold">Official Website</h3>
 							</div>
-							<div class="Card-description w--medium"><span>Coming Soon...</span></div>
+							<div class="Card-description w--medium"><span>inseq.atwebpages.com</span></div>
 						</div>
 					</a></div>
 
-				<div class="Card"><a class="Card-link" target="_blank" href="http://inseq.atwebpages.com/">
+				<div class="Card"><a class="Card-link" target="_blank" href="http://inseq.atwebpages.com/about.html">
 						<div class="Card-content">
 							<div class="Card-header">
 								<div class="Card-icon" style="background-image: url(./img/logos/jenil-profile.jpg)"></div>
 								<h3 class="Card-title ellipsis w--bold">About me</h3>
 							</div>
-							<div class="Card-description w--medium"><span>inseq.atwebpages.com</span></div>
+							<div class="Card-description w--medium"><span>inseq.atwebpages.com/About me</span></div>
 						</div>
 					</a></div>
 
